[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/box.png" type="Texture" id=1]
[ext_resource path="res://assets/exclamation_marks.png" type="Texture" id=2]
[ext_resource path="res://scenes/box/BoxArrive.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 7.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 21.0

[sub_resource type="Animation" id=1]
resource_name = "floating_mark"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ExclamationMarks:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 11, -14 ), Vector2( 11, -10 ) ]
}

[node name="BoxArrive" type="Node2D"]
position = Vector2( 91, 70 )
script = ExtResource( 3 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 1.0
margin_top = -15.0
margin_right = 69.0
margin_bottom = 23.0
rect_scale = Vector2( 0.5, 0.5 )
items = [ "Pick Up", null, 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BoxArea" type="Area2D" parent="."]

[node name="BoxCS" type="CollisionShape2D" parent="BoxArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="PopupMenuArea" type="Area2D" parent="."]

[node name="PopupManuCS" type="CollisionShape2D" parent="PopupMenuArea"]
shape = SubResource( 3 )

[node name="Box" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ExclamationMarks" type="Sprite" parent="."]
position = Vector2( 11, -14 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/floating_mark = SubResource( 1 )

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="mouse_entered" from="PopupMenu" to="." method="_on_PopupMenu_mouse_entered"]
[connection signal="mouse_exited" from="PopupMenu" to="." method="_on_PopupMenu_mouse_exited"]
[connection signal="mouse_entered" from="BoxArea" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="PopupMenuArea" to="." method="_on_PopupMenuArea_mouse_exited"]
